--- a/.dockerignore
+++ b/.dockerignore
@@ -2,10 +2,9 @@ __pycache__/
 *.pyc
 *.pyo
 *.pyd
-*.log
-.git/
-node_modules/
 .env
-
-venv/
-frontend/
+.git/
+.vscode/
+*.log
+documents/
+chromadb/
