fix: Add missing newline and ensure pandas is included for average response time calculation

--- a/requirements.txt
+++ b/requirements.txt
@@ -30,3 +30,6 @@ python-dotenv
 passlib[bcrypt]==1.7.4
 bcrypt==4.3.0
 python-jose[cryptography]
+
+# pandas for average response time calculation
+pandas
